Added updated Mini Chris Box Teensy code (its kinda long) I'll add documentation on that as soon as i got the time.

--- a/Arduino/ChrisJrBoxV3/platformio.ini
+++ b/Arduino/ChrisJrBoxV3/platformio.ini
@@ -12,3 +12,9 @@
 platform = teensy
 board = teensy41
 framework = arduino
+lib_deps = 
+	paulstoffregen/Time@^1.6.1
+	robtillaart/INA226@^0.6.4
+	adafruit/Adafruit GFX Library@^1.12.1
+	adafruit/Adafruit ST7735 and ST7789 Library@^1.11.0
+	bblanchon/ArduinoJson@^7.4.2
