Switched to QNEthernet for stability and performance benefits. Added UDP networking. Fixed TCP networking. Added network page. Added DHCP and static IP choices/editing. Added initialization page for showing system startup status. Fixed about section. Fixed time format and dark mode toggles. Fixed script recently used sorting. Added the dropdown choice to EEPROM. Made the 'Total' power outputs to 'Bus', now uses an INA226 for the full power bus. Fixed some button positions/spacing. Fixed data stream current to output as amps instead of milli amps. Cleaned up code and added comments + header.

--- a/Arduino/ChrisJrBoxV3/platformio.ini
+++ b/Arduino/ChrisJrBoxV3/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.12.1
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.11.0
 	bblanchon/ArduinoJson@^7.4.2
+	ssilverman/QNEthernet@^0.32.0
