Add MIT License, user manual, and UI color definitions; added a *secret* functionality and improved touch handling. Updated configuration and display files for enhanced color management and game controls. Also some bug fixes.

--- a/Arduino/ChrisJrBoxV3/platformio.ini
+++ b/Arduino/ChrisJrBoxV3/platformio.ini
@@ -19,9 +19,6 @@ lib_deps =
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.11.0
 	bblanchon/ArduinoJson@^7.4.2
 	ssilverman/QNEthernet@^0.32.0
-
-; --CPU speed (Hz)--
+	latimes2/InternalTemperature@^2.1.1-a
 board_build.f_cpu = 600000000L
-; 600000000 | 528000000 | 450000000 | 396000000 | 150000000 | 24000000 | 720000000 | 816000000 | 912000000 | 960000000 | 1008000000
-; CAUTION! 600000000 is the default option. Options higher than it are considered overclocking, and options higher than 816000000 REQUIRE ADDITIONAL COOLING!
-; (from Teensyduino Arduino IDE: .arduino15/packages/teensy/hardware/avr/1.58.0/boards.txt)
+build_flags = -Os -DNDEBUG
